@@ -1,4 +1,4 @@
-package controller;
+package com.sanroxcode.accountswitcher.controller;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -7,46 +7,42 @@ import java.io.InputStreamReader;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-public class SteamProcess {
-	private String steamExePath = null;
-	private static final Logger logger = LogManager.getLogger(SteamProcess.class);
-	private static final String osName = System.getProperty("os.name");
+public class SteamProcessX86 implements SteamProcess {
+	private String steamExePath;
 
-	public SteamProcess(String exePath) {
+	private static final Logger logger = LogManager.getLogger(SteamProcessX86.class);
+
+	public SteamProcessX86(String exePath) {
 		steamExePath = exePath;
 		// steamDirPath = dirPath;
 	}
 
+	@Override
 	public void start() throws InterruptedException, IOException {
-
-		// close(); // close previous opened instance
-
-		// System.out.println("Running steam instance...");
 		logger.debug("Starting new steam instance with sleep...");
 
-		if (osName.toLowerCase().contains("windows 10")) {
-			ProcessBuilder processBuilder = new ProcessBuilder();
-			processBuilder.command("cmd.exe", "/c", "start", "steam://open/main");
-			go(processBuilder, true);
-		} else {
-			String[] initParams = { steamExePath/* , "-silent" */ };
-			Runtime.getRuntime().exec(initParams);
-		}
+		ProcessBuilder processBuilder = new ProcessBuilder();
+		processBuilder.command(steamExePath, "-nocache",
+				"-noverifyfiles");/*
+									 * .redirectErrorStream(true).redirectError(Redirect.INHERIT)
+									 * .redirectOutput(Redirect.INHERIT);
+									 */
+		processBuilder.start();
 
 	}
 
 	public void close() throws InterruptedException {
 		logger.debug("Looking for steam.exe in tasklist result");
-		if (isSteamRunning()) {
+		if (isSteamRunning(true)) {
 			logger.debug("Closing previous steam instance...");
 			ProcessBuilder processBuilder = new ProcessBuilder();
-			processBuilder.command("cmd.exe", "/c", steamExePath, "-shutdown");
-			logger.debug("Launching go(" + steamExePath + ") with sleep...");
+			processBuilder.command(steamExePath, "-shutdown");
+
 			go(processBuilder, true);
 		}
 	}
 
-	private static String go(ProcessBuilder processBuilder, boolean bolwait) {
+	static String go(ProcessBuilder processBuilder, boolean bolwait) {
 		String retorno = null;
 		try {
 			Process process;
@@ -63,9 +59,11 @@ public class SteamProcess {
 				// System.out.println(line);
 			}
 			reader.close();
-			process.waitFor();
 
-			Thread.sleep(bolwait ? 1500 : 100);
+			if (bolwait)
+				process.waitFor();
+
+			Thread.sleep(100);
 
 			// System.out.println("Go exit code : " + code +
 			// "\n----------------------------");
@@ -79,19 +77,31 @@ public class SteamProcess {
 		return retorno;
 	}
 
-	private static String listProcesses() {
+	private static String listProcesses(boolean checkWindowed) {
 		ProcessBuilder processBuilder = new ProcessBuilder();
-		processBuilder.command("tasklist.exe", "/fi", "\"imagename eq steam.exe\"", "/fi", "\"windowtitle eq steam*\"",
-				"/fo", "csv", "/nh");
+		if (checkWindowed)
+			processBuilder.command("tasklist.exe", "/fi", "\"imagename eq steam.exe\"", "/fi",
+					"\"windowtitle eq steam*\"", "/fo", "csv", "/nh");
+		else
+			processBuilder.command("tasklist.exe", "/fi", "\"imagename eq steam.exe\"", "/fo", "csv", "/nh");
+
 		return go(processBuilder, false);
 	}
 
-	public static boolean isSteamRunning() {
-		String steamproc = listProcesses();
+	public static boolean isSteamRunning(boolean checkWindowed) {
+		String steamproc = listProcesses(checkWindowed);
 		if (steamproc.toLowerCase().contains("steam.exe")) {
 			return true;
 		}
 		return false;
 	}
 
+	public String getSteamExePath() {
+		return steamExePath;
+	}
+
+	@Override
+	public Logger logger() {
+		return logger;
+	}
 }
